# mailatlas

./: .cursorignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MARKETING_PLAN.md  Makefile  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  app.py  local_demo.py  pyproject.toml  requirements.txt  server.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: render_homebrew_formula.py
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  site-deploy.yml
codex-skills/mailatlas-landing-docs/: SKILL.md
codex-skills/mailatlas-landing-docs/agents/: openai.yaml
codex-skills/mailatlas-maintainer/: SKILL.md
codex-skills/mailatlas-maintainer/agents/: openai.yaml
data/fixtures/: README.md  atlas-demo.mbox
docs/maintainers/: releasing.md
docs/specs/: outbound-email.md
examples/: __init__.py
examples/briefing_demo/: __init__.py  app.py
packaging/homebrew/: README.md  mailatlas.rb
scripts/: demo_cli.sh  demo_parser_api.sh  render_homebrew_formula.py  smoke_release.py
site/: astro.config.mjs  package-lock.json  package.json
site/src/content/docs/: home.md
site/src/content/docs/cli/: overview.md
site/src/content/docs/python/: overview.md
site/src/layouts/: MarketingLayout.astro
site/src/pages/: index.astro
site/src/styles/: custom.css  landing.css
src/mailatlas/: __init__.py  __main__.py  cli.py  mcp_server.py  receive.py
src/mailatlas/adapters/: __init__.py  cloudflare.py  eml.py  file_bundle.py  gmail.py  imap.py  outbound.py  smtp.py
src/mailatlas/ai/: __init__.py  briefing.py
src/mailatlas/core/: __init__.py  exports.py  gmail_auth.py  mcp_tools.py  models.py  outbound.py  parsing.py  pdf.py  service.py  storage.py
tests/: test_mailatlas.py
tests/fixtures/: atlas-founder-forward.eml  atlas-inline-chart.eml  atlas-market-map.eml
(+13 files in other folders)
