[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mailatlas"
version = "0.2.0"
description = "Local email ingestion, export, sending, and audit trails for AI agents and data applications."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Chirag Agrawal"},
]
keywords = [
  "email ingestion",
  "email sending",
  "outbound email",
  "eml parser",
  "mbox parser",
  "email to json",
  "html to pdf",
  "rag",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Email",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi",
  "uvicorn",
  "python-dotenv>=1.0.1",
]
dev = [
  "build",
  "coverage",
  "fastapi",
  "uvicorn",
  "python-dotenv>=1.0.1",
]

[project.scripts]
mailatlas = "mailatlas.cli:main"

[project.urls]
Homepage = "https://mailatlas.dev"
Documentation = "https://mailatlas.dev/docs"
Source = "https://github.com/mailatlas/mailatlas"
Issues = "https://github.com/mailatlas/mailatlas/issues"
Changelog = "https://github.com/mailatlas/mailatlas/blob/main/CHANGELOG.md"
Support = "https://github.com/mailatlas/mailatlas/blob/main/SUPPORT.md"
"Code of Conduct" = "https://github.com/mailatlas/mailatlas/blob/main/CODE_OF_CONDUCT.md"
"Security Policy" = "https://github.com/mailatlas/mailatlas/security/policy"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
